# flexmatch

./: .gitignore  .gitmodules  README.md
configs/: example-accel-rewrites.json  flexasr-lstm.json  flexasr-maxpool.json  hlscnn-conv2d.json  im2col-rewrites.json  im2col.json  linear-rewrites.json  merge-region.json  nvdla.json  qnn-vta-dense.json  simpl.json  srams.json  vta-dense.json  vta-relu.json
demo/: 1_get_relay_model.sh  2_run_eqsat.sh  3_compile_model.sh  4_run_model.sh  Makefile  get_relay_model.py  init.sh  resmlp-rewritten.json  resmlp.py  resmlp.relay  run_byoc.py  run_byoc.sh  test_recexpr_compiler.py
demo/mobilenetv2/: quantized_mobilenetv2.relay  test_model_on_vta.py
flexmatch/: Cargo.toml  draw_graph.py  extracted_expr.txt  extraction_stats_im2col.txt  extraction_stats_im2col_with_simpl.txt  run_with_im2col.sh  run_with_opt.sh  test.sh
flexmatch/src/: cycles.rs  ilp_extract.rs  main.rs  maxsat_extract.rs  mod.rs  rewrites.rs
megraph/: __init__.py  analysis.py  eclass.py  egraph.py  egraph_constructor.py  from_relay.py  language.py  matcher.py
tests/: compile_model.py  conv1d.json  conv1d_data.json  flexmatch_eval.txt  get_table_stats.sh  linear_pattern.egraph  max_pool2d.py  measure_vta_perf.py  qdense.relay  resmlp-conv1d-im2col.relay  resmlp-dump.json  resmlp.py  resmlp.relay  resnet18_int16-data.json  resnet18_int16-rewritten.json  resnet18_int16-rewritten.relay  resnet20_int16-data.json  resnet20_int16-rewritten.json  resnet20_int16-rewritten.relay  run_comparison.py  run_eqsat.py  test.txt  test_conv1d.py  test_egraph_constructor.py  test_linear_pattern.py  test_mobilenetv2_vta.py  test_model_on_vta.py  test_qdense.py  test_recexpr_compiler.py  test_relay_quantization.py  test_resmlp.py  test_resmlp_recexpr_compiler.py  test_vta_quantization.py  validate_compilation.py  vta_tsim_conv2d.py  vta_tsim_dense.py
tests/models/: bert.relay  cifar_resnet20_float32q.relay  conv1d-im2col.relay  conv1d.json  conv1d.relay  conv2d-im2col.relay  conv2d.json  conv2d.relay  conv2d_add_relu.py  conv2d_data.json  data_reuse.py  efficientnet.py  efficientnet.relay  lstm_s2t.py  max_pool2d.py  max_pool2d.relay  mobilenet.py  mobilenet.relay  mobilenetv2.py  mobilenetv2.relay  mxnet-resnet.relay  qmobilenet.relay  qnn-mobilenet.relay  resmlp-compiled.relay  resmlp-depth-4.relay  resmlp-rewritten.json  resmlp.py  resmlp.relay  resnet.py  resnet18.relay  resnet18_int16.relay  resnet20.relay  resnet20_int16.relay  resnet50_simplifyinference_from_onnx.relay  resnet50_simplifyinference_from_pytorch.relay  utils.py  (+1 more)
