[package]
name = "flexmatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cplex = ["rplex", "glenside/cplex"]

[dependencies]
serde_json = "1.0"
serde = "1.0.130"
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.glenside]
git = "https://github.com/gussmith23/glenside"
rev = "56cb6fc8479ab2c98a1615524e7287471af02c81"
default-features = false
features = ["tvm"]

[dependencies.egg]
git = "https://github.com/AD1024/egg"
rev = "b8f902f554cc476c397e4fd9c7bea229f946d2a9"

[dependencies.tvm]
git = "ssh://git@github.com/uwsampl/3la-tvm.git"
rev = "82699dbfcbd942d49237addc4369f3f82c1f1147"

[dependencies.rplex]
optional = true
git = "https://github.com/gussmith23/rplex"
