[package]
name = "flexmatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cplex = ["rplex", "glenside/cplex"]

[dependencies]
serde_json = "1.0"
serde = "1.0.130"
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.glenside]
# git = "https://github.com/gussmith23/glenside"
# rev = "f5db69c4996e526a31f9386423578300b8575ebb"
path = "/root/wip/glenside"
default-features = false
features = ["tvm"]

[dependencies.egg]
git = "https://github.com/AD1024/egg"
rev = "b8f902f554cc476c397e4fd9c7bea229f946d2a9"

[dependencies.tvm]
git = "ssh://git@github.com/uwsampl/3la-tvm.git"
rev = "1ae704133bc52b36fb95aac7ddc043d25dca0c12"

[dependencies.rplex]
optional = true
git = "https://github.com/gussmith23/rplex"
